[tool.poetry]
name = "dice-roller"
version = "0.1.0"
description = ""
authors = ["Maya Schweizer <maya.schweizer18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
